@@ -19,58 +19,73 @@
 
 ## -*- texinfo -*-
 ## @deftypefn {Function File} {} shift (@var{x}, @var{b})
+## @deftypefnx {Function File} {} shift (@var{x}, @var{b}, @var{dim})
 ## If @var{x} is a vector, perform a circular shift of length @var{b} of
 ## the elements of @var{x}.
 ##
 ## If @var{x} is a matrix, do the same for each column of @var{x}.
+## If the optional @var{dim} argument is given, operate along this 
+## dimension
 ## @end deftypefn
 
 ## Author: AW <Andreas.Weingessel@ci.tuwien.ac.at>
 ## Created: 14 September 1994
 ## Adapted-By: jwe
 
-function y = shift (x, b)
+function y = shift (x, b, dim)
 
-  if (nargin != 2)
-    usage ("shift (X, b)");
-  endif
-
-  [nr, nc] = size (x);
-
-  if (nr == 0 || nc == 0)
-    error ("shift: x must not be empty");
-  elseif (nr == 1)
-    x = x.';
-    nr = nc;
-    nc = 0;
+  if (nargin != 2 && nargin != 3)
+    usage ("shift (X, b, dim)");
   endif
 
   if (! (isscalar (b) && b == round (b)))
     error ("shift: b must be an integer");
   endif
 
+  nd = ndims (x);
+  sz = size (x);
+
+  if (nargin == 3)
+    if (! (isscalar (dim) && dim == round (dim)) && dim > 0 && 
+	dim < (nd + 1))
+      error ("shift: dim must be an integer and valid dimension");
+    endif
+  else
+    %% Find the first non-singleton dimension
+    dim  = 1;
+    while (dim < nd + 1 && sz (dim) == 1)
+      dim = dim + 1;
+    endwhile
+    if (dim > nd)
+      dim = 1;
+    endif
+  endif
+
+  if (numel (x) < 1)
+    error ("shift: x must not be empty");
+  endif
+
+  d = sz (dim);
+
   save_warn_empty_list_elements = warn_empty_list_elements;
   unwind_protect
     warn_empty_list_elements = 0;
 
+    idx = cell ();
+    for i = 1:nd
+      idx {i} = 1:sz(i);
+    endfor
     if (b >= 0)
-      b = rem (b, nr);
-      t1 = x (nr-b+1:nr, :);
-      t2 = x (1:nr-b, :);
-      y = [t1; t2];
+      b = rem (b, d);
+      idx {dim} = [d-b+1:d, 1:d-b];
     elseif (b < 0)
-      b = rem (abs (b), nr);
-      t1 = x (b+1:nr, :);
-      t2 = x (1:b, :);
-      y = [t1; t2];
+      b = rem (abs (b), d);
+      idx {dim} = [b+1:d, 1:b];
     endif
+    y = x (idx {:});
 
   unwind_protect_cleanup
     warn_empty_list_elements = save_warn_empty_list_elements;
   end_unwind_protect
-
-  if (nc == 0)
-    y = reshape (y, 1, nr);
-  endif
 
 endfunction
