@@ -1,3 +1,11 @@
+2004-04-15  David Bateman  <dbateman@free.fr>
+
+	* src/ov-ch-mat.h: convert_to_str_interal returns charNDArray.
+
+2004-04-12  John W. Eaton  <jwe@octave.org>
+
+	* version.h (OCTAVE_BUGS_STATEMENT): Bug list is now bug@octave.org.
+
 2004-04-08  John W. Eaton  <jwe@octave.org>
 
 	* ov-base-mat.cc (octave_base_matrix<MT>::do_index_op): Quit early
